fix: item not showing up on homepage

--- a/src/app/first-page/first-page.component.scss
+++ b/src/app/first-page/first-page.component.scss
@@ -1,10 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 * {
     padding: 0;
     margin: 0;
     color: #1a1f36;
     box-sizing: border-box;
     word-wrap: break-word;
-    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Ubuntu, sans-serif;
+    font-family: Poppins, sans-serif;
 }
 
 body {
@@ -166,7 +167,7 @@ label {
     align-items: center;
 }
 
-.field input {
+.field input, select {
     font-size: 16px;
     line-height: 28px;
     padding: 8px 16px;
@@ -203,6 +204,8 @@ label {
         rgba(0, 0, 0, 0) 0px 0px 0px 0px,
         rgba(0, 0, 0, 0) 0px 0px 0px 0px;
 }
+
+
 input[type="submit"] {
     background-color: rgb(84, 105, 212);
     box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px 0px,
@@ -215,15 +218,6 @@ input[type="submit"] {
     color: #fff;
     font-weight: 600;
     cursor: pointer;
-}
-
-select {
-    display: block;
-    width: 90%;
-    padding: 0;
-    border: none;
-    outline: none;
-    box-sizing: border-box;
 }
 
 .field-checkbox input {
